1999-07-13  Harri Porten  <porten@kde.org>

	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
	users. 7bit will simply strip off the highest bit to deal with the
	incoming 7E1 data. Write operations are not affected.
	* modem.cpp: try a tcsendbreak() if tcgetattr() fails. Ask for
	feedback if that solved the "modem is busy" error for anyone.
	* modem.cpp: read data in multiple chunks of up to 200 bytes. This 
	should speed up things and avoid problems with the socket notifier. 

1999-07-11  Harri Porten  <porten@kde.org>

	* connect.cpp: moved some code from readChar() into checkBuffers() 
	to clean up the setExpect() race condition fix.

1999-07-06  Harri Porten  <porten@kde.org>

	* modem.cpp: adhere to the lock file format described in the
	Serial HOWTO (10 digits pid and a newline).
	* edit.cpp: fixed highlighting in ScriptWidget
	* connect.cpp: fixed race condition that might have lead to data not
	being caught by "Expect" (found by Arch Harris <arch@cs.jmu.edu>)

1999-06-11  Harri Porten  <porten@kde.org>

	* pppdata.cpp: line termination will default to CR instead of CR/LF.

1999-06-10  Harri Porten  <porten@kde.org>

	* modem.cpp: fixed check for stale lock file ((s)traced down by
	Duane Ellis <duane@skyhigh.com>)

1999-04-30  Harri Porten  <porten@kde.org>

	* conwindow.cpp: fixed deleting of old geometry layout
	* logview/loginfo.cpp: added #include <string.h> for strsep
	* "PPP support missing" is no longer fatal. Just a warning.
	* pppstatdlg.cpp: update statistic data even if widget is not visible.
	(patch by  Bastien Chevreux <B.Chevreux@dkfz-heidelberg.de>)

=========================== KDE 1.1.1 released =============================

1999-04-24  Harri Porten  <porten@kde.org>

	* runtests.cpp: test for `lock' in /etc/ppp/options is not needed any-
	more, thanks to a hint from Paul Mackeras (pppd). Leaving away ttySx
	(99/04/10) from the command line and binding stdin/stdout to the